src/snapshots/fad__disasm_tests__disasm_json_option_aarch64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== json/option ===
  sub sp, sp, #0x90
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str xzr, [sp, #0x30]
  cmp x19, x20
  b.hs $+0x3c
  ldrb w10, [x19]
  sub w9, w10, #0x9
  cmp w9, #0x17
  b.hi $+0x1c
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  lsr x8, x8, x9
  tbz w8, #0x0, $+0xc
  add x19, x19, #0x1
  b $-0x2c
  cmp w10, #0x7b
  b.ne $+0xc
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x5
  str w9, [x22, #0x10]
  b $+0x504
  str x19, [x22]
  mov x0, x22
  add x1, sp, #0x48
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x4d8
  ldrb w9, [sp, #0x48]
  cmp w9, #0x7d
  b.eq $+0x490
  cmp x19, x20
  b.hs $+0x30
  ldrb w9, [x19]
  cmp w9, #0x20
  b.eq $+0x1c
  cmp w9, #0xa
  b.eq $+0x14
  cmp w9, #0xd
  b.eq $+0xc
  cmp w9, #0x9
  b.ne $+0xc
  add x19, x19, #0x1
  b $-0x30
  cmp x19, x20
  b.hs $+0x18
  ldrb w9, [x19]
  cmp w9, #0x22
  b.ne $+0xc
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x7
  str w9, [x22, #0x10]
  b $+0x470
  str x19, [sp, #0x38]
  movi v1.16b, #0x22
  movi v2.16b, #0x5c
  sub x9, x20, x19
  cmp x9, #0x10
  b.lo $+0x58
  ld1 {v0.16b}, [x19]
  cmeq v3.16b, v0.16b, v1.16b
  cmeq v4.16b, v0.16b, v2.16b
  orr v3.16b, v3.16b, v4.16b
  umaxv b5, v3.16b
  umov w9, v5.b[0]
  cbz w9, $+0x34
  mov x10, #<imm>
  ldrb w9, [x19, x10]
  cmp w9, #0x22
  b.eq $+0x14
  cmp w9, #0x5c
  b.eq $+0xc
  add x10, x10, #0x1
  b $-0x18
  add x19, x19, x10
  cmp w9, #0x22
  b.eq $+0x34
  b $+0x44
  add x19, x19, #0x10
  b $-0x5c
  cmp x19, x20
  b.hs $+0x78
  ldrb w9, [x19]
  cmp w9, #0x22
  b.eq $+0x14
  cmp w9, #0x5c
  b.eq $+0x20
  add x19, x19, #0x1
  b $-0x20
  ldr x9, [sp, #0x38]
  sub x10, x19, x9
  str x10, [sp, #0x40]
  add x19, x19, #0x1
  b $+0x54
  ldr x9, [sp, #0x38]
  sub x10, x19, x9
  str x19, [x22]
  mov x0, x22
  mov x1, x9
  mov x2, x10
  add x3, sp, #0x38
  add x4, sp, #0x40
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x38c
  b $+0x10
  mov w9, #0x8
  str w9, [x22, #0x10]
  b $+0x37c
  cmp x19, x20
  b.hs $+0x3c
  ldrb w10, [x19]
  sub w9, w10, #0x9
  cmp w9, #0x17
  b.hi $+0x1c
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  lsr x8, x8, x9
  tbz w8, #0x0, $+0xc
  add x19, x19, #0x1
  b $-0x2c
  cmp w10, #0x3a
  b.ne $+0xc
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x6
  str w9, [x22, #0x10]
  b $+0x330
  ldr x0, [sp, #0x38]
  ldr x1, [sp, #0x40]
  mov x2, #<imm>
  movk x2, #<imm>, lsl #16
  movk x2, #<imm>, lsl #32
  movk x2, #<imm>, lsl #48
  mov x3, #<imm>
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  cbnz x0, $+0x3c
  ldr x0, [sp, #0x38]
  ldr x1, [sp, #0x40]
  mov x2, #<imm>
  movk x2, #<imm>, lsl #16
  movk x2, #<imm>, lsl #32
  movk x2, #<imm>, lsl #48
  mov x3, #<imm>
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  cbnz x0, $+0x1a4
  b $+0x1e0
  cmp x19, x20
  b.hs $+0x30
  ldrb w9, [x19]
  cmp w9, #0x20
  b.eq $+0x1c
  cmp w9, #0xa
  b.eq $+0x14
  cmp w9, #0xd
  b.eq $+0xc
  cmp w9, #0x9
  b.ne $+0xc
  add x19, x19, #0x1
  b $-0x30
  cmp x19, x20
  b.hs $+0x18
  ldrb w9, [x19]
  cmp w9, #0x22
  b.ne $+0xc
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x7
  str w9, [x22, #0x10]
  b $+0x268
  str x19, [sp, #0x50]
  movi v1.16b, #0x22
  movi v2.16b, #0x5c
  sub x9, x20, x19
  cmp x9, #0x10
  b.lo $+0x58
  ld1 {v0.16b}, [x19]
  cmeq v3.16b, v0.16b, v1.16b
  cmeq v4.16b, v0.16b, v2.16b
  orr v3.16b, v3.16b, v4.16b
  umaxv b5, v3.16b
  umov w9, v5.b[0]
  cbz w9, $+0x34
  mov x10, #<imm>
  ldrb w9, [x19, x10]
  cmp w9, #0x22
  b.eq $+0x14
  cmp w9, #0x5c
  b.eq $+0xc
  add x10, x10, #0x1
  b $-0x18
  add x19, x19, x10
  cmp w9, #0x22
  b.eq $+0x34
  b $+0x80
  add x19, x19, #0x10
  b $-0x5c
  cmp x19, x20
  b.hs $+0xb0
  ldrb w9, [x19]
  cmp w9, #0x22
  b.eq $+0x14
  cmp w9, #0x5c
  b.eq $+0x5c
  add x19, x19, #0x1
  b $-0x20
  ldr x9, [sp, #0x50]
  sub x10, x19, x9
  str x10, [sp, #0x58]
  str x19, [x22]
  mov x0, x22
  mov x1, x9
  mov w2, w10
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1a0
  str x0, [x21, #0x8]
  ldr x9, [sp, #0x58]
  str x9, [x21, #0x10]
  str x9, [x21]
  add x19, x19, #0x1
  b $+0x50
  ldr x9, [sp, #0x50]
  sub x10, x19, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x2, x9
  mov x3, x10
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x14c
  b $+0x10
  mov w9, #0x8
  str w9, [x22, #0x10]
  b $+0x13c
  ldr x9, [sp, #0x30]
  mov x10, #<imm>
  orr x9, x9, x10
  str x9, [sp, #0x30]
  b $+0x6c
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x18
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xfc
  ldr x9, [sp, #0x30]
  mov x10, #<imm>
  orr x9, x9, x10
  str x9, [sp, #0x30]
  b $+0x2c
  str x19, [x22]
  mov x0, x22
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xc0
  cmp x19, x20
  b.hs $+0x30
  ldrb w9, [x19]
  cmp w9, #0x20
  b.eq $+0x1c
  cmp w9, #0xa
  b.eq $+0x14
  cmp w9, #0xd
  b.eq $+0xc
  cmp w9, #0x9
  b.ne $+0xc
  add x19, x19, #0x1
  b $-0x30
  cmp x19, x20
  b.hs $+0x84
  ldrb w9, [x19]
  add x19, x19, #0x1
  cmp w9, #0x2c
  b.eq $+0x18
  cmp w9, #0x7d
  b.eq $+0x18
  mov w9, #0xb
  str w9, [x22, #0x10]
  b $+0x60
  strb wzr, [sp, #0x48]
  b $+0xc
  mov w9, #0x1
  strb w9, [sp, #0x48]
  ldrb w9, [sp, #0x48]
  cmp w9, #0x1
  b.eq $+0xc
  b $-0x488
  add x19, x19, #0x1
  ldr x9, [sp, #0x30]
  mov x10, #<imm>
  and x11, x9, x10
  cmp x11, x10
  b.eq $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x1c
  str x19, [x22]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x90
  ret
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x90
  ret
