src/snapshots/fad__disasm_tests__disasm_json_vec_aarch64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== json/vec ===
  sub sp, sp, #0x70
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1f8
  str x19, [x22]
  mov x0, x22
  add x1, sp, #0x48
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1cc
  ldrb w9, [sp, #0x48]
  cmp w9, #0x5d
  b.eq $+0x164
  str x19, [x22]
  mov x0, x22
  mov x1, #<imm>
  mov x2, #<imm>
  mov x3, #<imm>
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w10, [x22, #0x10]
  cbnz w10, $+0x18c
  str x21, [sp, #0x50]
  str x0, [sp, #0x58]
  str xzr, [sp, #0x60]
  mov x10, #<imm>
  str x10, [sp, #0x68]
  ldr x10, [sp, #0x60]
  ldr x11, [sp, #0x68]
  cmp x10, x11
  b.eq $+0x90
  ldr x21, [sp, #0x58]
  ldr x10, [sp, #0x60]
  mov x11, #<imm>
  madd x21, x10, x11, x21
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x12c
  ldr w10, [x22, #0x10]
  cbnz w10, $+0xe0
  ldr x10, [sp, #0x60]
  add x10, x10, #0x1
  str x10, [sp, #0x60]
  str x19, [x22]
  mov x0, x22
  add x1, sp, #0x48
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xec
  ldrb w9, [sp, #0x48]
  cmp w9, #0x1
  b.eq $+0x64
  b $-0x98
  str x19, [x22]
  ldr x10, [sp, #0x68]
  lsl x10, x10, #0x1
  mov x0, x22
  ldr x1, [sp, #0x58]
  ldr x2, [sp, #0x60]
  ldr x3, [sp, #0x68]
  mov x4, x10
  mov x5, #<imm>
  mov x6, #<imm>
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w10, [x22, #0x10]
  cbnz w10, $+0x94
  str x0, [sp, #0x58]
  ldr x10, [sp, #0x68]
  lsl x10, x10, #0x1
  str x10, [sp, #0x68]
  b $-0xe4
  ldr x21, [sp, #0x50]
  ldr x10, [sp, #0x58]
  ldr x11, [sp, #0x60]
  ldr x12, [sp, #0x68]
  str x10, [x21, #0x8]
  str x11, [x21, #0x10]
  str x12, [x21]
  b $+0x48
  add x19, x19, #0x1
  mov x10, #<imm>
  str x10, [x21, #0x8]
  str xzr, [x21, #0x10]
  str xzr, [x21]
  b $+0x30
  ldr x21, [sp, #0x50]
  ldr x0, [sp, #0x58]
  ldr x1, [sp, #0x68]
  mov x2, #<imm>
  mov x3, #<imm>
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  b $+0x1c
  str x19, [x22]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x70
  ret
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x70
  ret
