src/snapshots/fad__disasm_tests__disasm_postcard_all_scalars_aarch64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== postcard/all_scalars ===
000000: <entry>  sub sp, sp, #0x40
000004:  stp x29, x30, [sp]
000008:  stp x19, x20, [sp, #0x10]
00000c:  stp x21, x22, [sp, #0x20]
000010:  mov x29, sp
000014:  mov x21, x0
000018:  mov x22, x1
00001c:  ldr x19, [x22]
000020:  ldr x20, [x22, #0x8]
000024:  cmp x19, x20
000028:  b.hs $+0x2c
00002c:  ldrb w9, [x19]
000030:  cmp w9, #0x1
000034:  b.hi $+0x8
000038:  b $+0x10
00003c:  mov w9, #0xd
000040:  str w9, [x22, #0x10]
000044:  b $+0x3bc
000048:  strb w9, [x21, #0x40]
00004c:  add x19, x19, #0x1
000050:  b $+0x10
000054:  mov w9, #0x1
000058:  str w9, [x22, #0x10]
00005c:  b $+0x3a4
000060:  cmp x19, x20
000064:  b.hs $+0x14
000068:  ldrb w9, [x19]
00006c:  strb w9, [x21, #0x41]
000070:  add x19, x19, #0x1
000074:  b $+0x10
000078:  mov w9, #0x1
00007c:  str w9, [x22, #0x10]
000080:  b $+0x380
000084:  cmp x19, x20
000088:  b.hs $+0x48
00008c:  ldrb w9, [x19]
000090:  tbnz w9, #0x7, $+0x10
000094:  add x19, x19, #0x1
000098:  strh w9, [x21, #0x3c]
00009c:  b $+0x30
0000a0:  str x19, [x22]
0000a4:  mov x0, x22
0000a8:  add x1, x21, #0x3c
0000ac:  mov x8, #<imm>
0000b0:  movk x8, #<imm>, lsl #16
0000b4:  movk x8, #<imm>, lsl #32
0000b8:  movk x8, #<imm>, lsl #48
0000bc:  blr x8
0000c0:  ldr x19, [x22]
0000c4:  ldr w9, [x22, #0x10]
0000c8:  cbnz w9, $+0x338
0000cc:  b $+0x10
0000d0:  mov w9, #0x1
0000d4:  str w9, [x22, #0x10]
0000d8:  b $+0x328
0000dc:  cmp x19, x20
0000e0:  b.hs $+0x48
0000e4:  ldrb w9, [x19]
0000e8:  tbnz w9, #0x7, $+0x10
0000ec:  add x19, x19, #0x1
0000f0:  str w9, [x21, #0x30]
0000f4:  b $+0x30
0000f8:  str x19, [x22]
0000fc:  mov x0, x22
000100:  add x1, x21, #0x30
000104:  mov x8, #<imm>
000108:  movk x8, #<imm>, lsl #16
00010c:  movk x8, #<imm>, lsl #32
000110:  movk x8, #<imm>, lsl #48
000114:  blr x8
000118:  ldr x19, [x22]
00011c:  ldr w9, [x22, #0x10]
000120:  cbnz w9, $+0x2e0
000124:  b $+0x10
000128:  mov w9, #0x1
00012c:  str w9, [x22, #0x10]
000130:  b $+0x2d0
000134:  cmp x19, x20
000138:  b.hs $+0x48
00013c:  ldrb w9, [x19]
000140:  tbnz w9, #0x7, $+0x10
000144:  add x19, x19, #0x1
000148:  str x9, [x21, #0x18]
00014c:  b $+0x30
000150:  str x19, [x22]
000154:  mov x0, x22
000158:  add x1, x21, #0x18
00015c:  mov x8, #<imm>
000160:  movk x8, #<imm>, lsl #16
000164:  movk x8, #<imm>, lsl #32
000168:  movk x8, #<imm>, lsl #48
00016c:  blr x8
000170:  ldr x19, [x22]
000174:  ldr w9, [x22, #0x10]
000178:  cbnz w9, $+0x288
00017c:  b $+0x10
000180:  mov w9, #0x1
000184:  str w9, [x22, #0x10]
000188:  b $+0x278
00018c:  cmp x19, x20
000190:  b.hs $+0x14
000194:  ldrb w9, [x19]
000198:  strb w9, [x21, #0x42]
00019c:  add x19, x19, #0x1
0001a0:  b $+0x10
0001a4:  mov w9, #0x1
0001a8:  str w9, [x22, #0x10]
0001ac:  b $+0x254
0001b0:  cmp x19, x20
0001b4:  b.hs $+0x58
0001b8:  ldrb w9, [x19]
0001bc:  tbnz w9, #0x7, $+0x20
0001c0:  add x19, x19, #0x1
0001c4:  lsr w10, w9, #0x1
0001c8:  and w11, w9, #0x1
0001cc:  neg w11, w11
0001d0:  eor w9, w10, w11
0001d4:  strh w9, [x21, #0x3e]
0001d8:  b $+0x30
0001dc:  str x19, [x22]
0001e0:  mov x0, x22
0001e4:  add x1, x21, #0x3e
0001e8:  mov x8, #<imm>
0001ec:  movk x8, #<imm>, lsl #16
0001f0:  movk x8, #<imm>, lsl #32
0001f4:  movk x8, #<imm>, lsl #48
0001f8:  blr x8
0001fc:  ldr x19, [x22]
000200:  ldr w9, [x22, #0x10]
000204:  cbnz w9, $+0x1fc
000208:  b $+0x10
00020c:  mov w9, #0x1
000210:  str w9, [x22, #0x10]
000214:  b $+0x1ec
000218:  cmp x19, x20
00021c:  b.hs $+0x58
000220:  ldrb w9, [x19]
000224:  tbnz w9, #0x7, $+0x20
000228:  add x19, x19, #0x1
00022c:  lsr w10, w9, #0x1
000230:  and w11, w9, #0x1
000234:  neg w11, w11
000238:  eor w9, w10, w11
00023c:  str w9, [x21, #0x34]
000240:  b $+0x30
000244:  str x19, [x22]
000248:  mov x0, x22
00024c:  add x1, x21, #0x34
000250:  mov x8, #<imm>
000254:  movk x8, #<imm>, lsl #16
000258:  movk x8, #<imm>, lsl #32
00025c:  movk x8, #<imm>, lsl #48
000260:  blr x8
000264:  ldr x19, [x22]
000268:  ldr w9, [x22, #0x10]
00026c:  cbnz w9, $+0x194
000270:  b $+0x10
000274:  mov w9, #0x1
000278:  str w9, [x22, #0x10]
00027c:  b $+0x184
000280:  cmp x19, x20
000284:  b.hs $+0x58
000288:  ldrb w9, [x19]
00028c:  tbnz w9, #0x7, $+0x20
000290:  add x19, x19, #0x1
000294:  lsr w10, w9, #0x1
000298:  and w11, w9, #0x1
00029c:  neg w11, w11
0002a0:  eor w9, w10, w11
0002a4:  str x9, [x21, #0x20]
0002a8:  b $+0x30
0002ac:  str x19, [x22]
0002b0:  mov x0, x22
0002b4:  add x1, x21, #0x20
0002b8:  mov x8, #<imm>
0002bc:  movk x8, #<imm>, lsl #16
0002c0:  movk x8, #<imm>, lsl #32
0002c4:  movk x8, #<imm>, lsl #48
0002c8:  blr x8
0002cc:  ldr x19, [x22]
0002d0:  ldr w9, [x22, #0x10]
0002d4:  cbnz w9, $+0x12c
0002d8:  b $+0x10
0002dc:  mov w9, #0x1
0002e0:  str w9, [x22, #0x10]
0002e4:  b $+0x11c
0002e8:  sub x9, x20, x19
0002ec:  cmp x9, #0x4
0002f0:  b.lo $+0x14
0002f4:  ldr w9, [x19]
0002f8:  str w9, [x21, #0x38]
0002fc:  add x19, x19, #0x4
000300:  b $+0x10
000304:  mov w9, #0x1
000308:  str w9, [x22, #0x10]
00030c:  b $+0xf4
000310:  sub x9, x20, x19
000314:  cmp x9, #0x8
000318:  b.lo $+0x14
00031c:  ldr x9, [x19]
000320:  str x9, [x21, #0x28]
000324:  add x19, x19, #0x8
000328:  b $+0x10
00032c:  mov w9, #0x1
000330:  str w9, [x22, #0x10]
000334:  b $+0xcc
000338:  cmp x19, x20
00033c:  b.hs $+0xa0
000340:  ldrb w9, [x19]
000344:  tbnz w9, #0x7, $+0xc
000348:  add x19, x19, #0x1
00034c:  b $+0x34
000350:  str x19, [x22]
000354:  mov x0, x22
000358:  add x1, sp, #0x30
00035c:  mov x8, #<imm>
000360:  movk x8, #<imm>, lsl #16
000364:  movk x8, #<imm>, lsl #32
000368:  movk x8, #<imm>, lsl #48
00036c:  blr x8
000370:  ldr x19, [x22]
000374:  ldr w10, [x22, #0x10]
000378:  cbnz w10, $+0x88
00037c:  ldr w9, [sp, #0x30]
000380:  str w9, [sp, #0x30]
000384:  sub x10, x20, x19
000388:  cmp x10, x9
00038c:  b.lo $+0x50
000390:  mov x10, x19
000394:  str x19, [x22]
000398:  mov x0, x22
00039c:  mov x1, x10
0003a0:  mov w2, w9
0003a4:  mov x8, #<imm>
0003a8:  movk x8, #<imm>, lsl #16
0003ac:  movk x8, #<imm>, lsl #32
0003b0:  movk x8, #<imm>, lsl #48
0003b4:  blr x8
0003b8:  ldr w10, [x22, #0x10]
0003bc:  cbnz w10, $+0x44
0003c0:  ldr w9, [sp, #0x30]
0003c4:  str x0, [x21, #0x8]
0003c8:  str x9, [x21, #0x10]
0003cc:  str x9, [x21]
0003d0:  add x19, x19, x9
0003d4:  b $+0x4
0003d8:  b $+0x10
0003dc:  mov w9, #0x1
0003e0:  str w9, [x22, #0x10]
0003e4:  b $+0x1c
0003e8:  str x19, [x22]
0003ec:  ldp x21, x22, [sp, #0x20]
0003f0:  ldp x19, x20, [sp, #0x10]
0003f4:  ldp x29, x30, [sp]
0003f8:  add sp, sp, #0x40
0003fc:  ret
000400:  ldp x21, x22, [sp, #0x20]
000404:  ldp x19, x20, [sp, #0x10]
000408:  ldp x29, x30, [sp]
00040c:  add sp, sp, #0x40
000410:  ret
